--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
 1. Variables
 ------------------------------------*/
 :root {
-  --bg-dark: #3c0000;
-  --bg-light: #421515;
+  --bg-light: #900303;  
+  --bg-dark: #421515;
   --accent-mid: #ff3300;
   --accent-light: #ffee00;
   --white: #ffffff;
@@ -171,7 +171,11 @@ input[type="text"] {
 }
 input[type="text"]:focus {
   outline: none;
-  box-shadow: 0 0 12px var(--accent-mid);
+  /* Quitamos el box-shadow original */
+  /* box-shadow: 0 0 12px var(--accent-mid); */
+
+  /* Aplicamos ahora drop-shadow con filter */
+  filter: drop-shadow(0 0 12px var(--accent-mid));
   transform: translateY(-2px);
 }
 /* ========== Titileo suave del placeholder ========== */
@@ -330,6 +334,9 @@ input[type="text"]:-ms-input-placeholder      { animation: placeholderBlink 1s e
   border-radius: var(--radius);
   padding: 1.5rem;
   margin-top: var(--gutter);
+  text-shadow:
+    2px 2px 4px rgba(0,0,0,0.9),
+    0    0    8px var(--accent-mid);
 }
 
 .testimonials-section h2 {
@@ -354,7 +361,7 @@ input[type="text"]:-ms-input-placeholder      { animation: placeholderBlink 1s e
   left: 0;
   opacity: 0;
   transform: translateY(20px);
-  background: rgba(206, 64, 2, 0.9)
+  background: linear-gradient(180deg, rgba(206, 64, 2, 0.9), rgba(64, 21, 3, 0.9));
   padding: 0.75rem 1rem;
   border-radius: calc(var(--radius)/2);
   box-shadow: 0 4px 12px rgba(0,0,0,0.5);
@@ -404,4 +411,7 @@ input[type="text"]:-ms-input-placeholder      { animation: placeholderBlink 1s e
   height: auto;
   display: block;
   margin: 0 auto;
+}
+.logo {
+  display: none;
 }
